AC-253 Modify customer resset pasword Api method

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -150,7 +150,7 @@ old_sound_rabbit_mq:
                 durable: true
             queue_options:
                 name: sendToSpot_%session_prefix%
-            callback: araneum.base.rabbitmq.consumer.spot
+            callback: araneum.base.rabbitmq.consumer.spot_customer
 
 snc_redis:
     clients:
