--- a/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
@@ -10,7 +10,11 @@ services:
 
     araneum.agent.spotoption.service:
         class: Araneum\Bundle\AgentBundle\Service\SpotOptionService
-        arguments: [@araneum.base.rabbitmq.producer.spot, @araneum.base.spot_api, @doctrine.orm.entity_manager]
+        arguments:
+            - @araneum.base.rabbitmq.producer.spot_login
+            - @araneum.base.rabbitmq.producer.spot
+            - @araneum.base.spot_api
+            - @doctrine.orm.entity_manager
 
     araneum.agent.logger:
         class: Araneum\Bundle\AgentBundle\Service\AgentLoggerService
