--- a/web/admin/source/require/bower.json
+++ b/web/admin/source/require/bower.json
@@ -31,7 +31,7 @@
     "angular-translate-loader-static-files": "2.6.0",
     "angular-translate-storage-local": "2.6.0",
     "angular-translate-storage-cookie": "2.6.0",
-    "angular-animate": "~1.4.8",
+    "angular-animate": "^1.4.2",
     "angular-ui-utils": "0.2.2",
     "angularjs-toaster": "0.4.8",
     "flatdoc": "0.9.0",
