--- a/web/admin/source/require/bower.json
+++ b/web/admin/source/require/bower.json
@@ -31,9 +31,9 @@
     "angular-translate-loader-static-files": "2.6.0",
     "angular-translate-storage-local": "2.6.0",
     "angular-translate-storage-cookie": "2.6.0",
-    "angular-animate": "^1.4.2",
+    "angular-animate": "~1.4.8",
     "angular-ui-utils": "0.2.2",
-    "angularjs-toaster": "0.4.8",
+    "angularjs-toaster": "0.4.18",
     "flatdoc": "0.9.0",
     "fontawesome": "4.3.0",
     "oclazyload": "0.6.3",
@@ -107,8 +107,7 @@
     "angular-knob": "~0.0.2",
     "jquery.easy-pie-chart": "~2.1.6",
     "angular-bootstrap-colorpicker": "~3.0.18",
-    "jquery-validation": "~1.14.0",
-    "AngularJS-Toaster": "angularjs-toaster#~0.4.181"
+    "jquery-validation": "~1.14.0"
   },
   "resolutions": {
     "jquery-ui": "1.11.3",
