--- a/web/admin/source/require/bower.json
+++ b/web/admin/source/require/bower.json
@@ -31,7 +31,6 @@
     "angular-translate-loader-static-files": "2.6.0",
     "angular-translate-storage-local": "2.6.0",
     "angular-translate-storage-cookie": "2.6.0",
-    "angular-animate": "~1.4.8",
     "angular-ui-utils": "0.2.2",
     "angularjs-toaster": "0.4.18",
     "flatdoc": "0.9.0",
@@ -107,7 +106,8 @@
     "angular-knob": "~0.0.2",
     "jquery.easy-pie-chart": "~2.1.6",
     "angular-bootstrap-colorpicker": "~3.0.18",
-    "jquery-validation": "~1.14.0"
+    "jquery-validation": "~1.14.0",
+    "angular-animate": "~1.4.8"
   },
   "resolutions": {
     "jquery-ui": "1.11.3",
