--- a/web/admin/source/require/bower.json
+++ b/web/admin/source/require/bower.json
@@ -107,7 +107,7 @@
     "jquery.easy-pie-chart": "~2.1.6",
     "angular-bootstrap-colorpicker": "~3.0.18",
     "jquery-validation": "~1.14.0",
-    "angular-animate": "~1.4.8"
+    "angular-animate": "1.4.3"
   },
   "resolutions": {
     "jquery-ui": "1.11.3",
@@ -119,6 +119,6 @@
     "moment": "2.9.0",
     "seiyria-bootstrap-slider": "3.1.0",
     "codemirror": "5.0.0",
-    "angular-route": "1.4.2"
+    "angular-route": "1.4.3"
   }
 }
