--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -13,7 +13,7 @@ services:
     
     araneum.main.application.remote_manager:
         class: Araneum\Bundle\MainBundle\Service\RemoteApplicationManagerService
-        arguments: [@guzzle.client, @service_container]
+        arguments: [@guzzle.client, @doctrine.orm.entity_manager, %site_api%]
 
     araneum.main.application.event_listener:
         class: Araneum\Bundle\MainBundle\Service\ApplicationEventListenerService
