--- a/web/admin/source/require/bower.json
+++ b/web/admin/source/require/bower.json
@@ -106,7 +106,8 @@
     "jquery.easy-pie-chart": "~2.1.6",
     "angular-bootstrap-colorpicker": "~3.0.18",
     "jquery-validation": "~1.14.0",
-    "angular-animate": "1.4.3"
+    "angular-animate": "1.4.3",
+    "AngularJS-Toaster": "angularjs-toaster#~0.4.181"
   },
   "resolutions": {
     "jquery-ui": "1.11.3",
