AC-267 Fix bug associated with api routes (in Api Doc)

--- a/src/Araneum/Base/Resources/config/services.yml
+++ b/src/Araneum/Base/Resources/config/services.yml
@@ -1,6 +1,12 @@
 services:
-    araneum_authentication:
+    araneum.auth.entry_point:
         class: Araneum\Base\Symfony\Security\AuthenticationEntryPoint
+
+    araneum.auth.success.handler:
+        class: Araneum\Base\Symfony\Security\AuthenticationSuccessHandler
+
+    araneum.auth.failure.handler:
+            class: Araneum\Base\Symfony\Security\AuthenticationFailureHandler
 
     araneum_datatable:
         class: Araneum\Base\Ali\DatatableBundle\Util\AraneumDatatable
