--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -167,3 +167,8 @@ snc_redis:
         client: session
         prefix: %session_prefix%
         ttl: 1200
+
+jms_i18n_routing:
+    default_locale: %locale%
+    locales: %locales%
+    strategy: prefix_except_default
