--- a/src/Araneum/Base/Resources/config/services.yml
+++ b/src/Araneum/Base/Resources/config/services.yml
@@ -42,10 +42,10 @@ services:
     araneum.base.rabbitmq.msg_convert_helper:
         class: Araneum\Base\Service\RabbitMQ\MessageConversionHelper
 
-    araneum.base.rabbitmq.producer.spot:
+    araneum.base.rabbitmq.producer.spot_customer:
         class: Araneum\Base\Service\RabbitMQ\SpotCustomerProducerService
         arguments:
-            - @old_sound_rabbit_mq.spot_producer
+            - @old_sound_rabbit_mq.spot_customer_producer
             - @araneum.base.rabbitmq.msg_convert_helper
             - %rabbitmq_queue_expiration%
 
@@ -56,3 +56,14 @@ services:
     araneum.base.spot_api:
         class: Araneum\Base\Service\Spot\SpotApiSenderService
         arguments: [@guzzle.client, %spot_enable_json_responce%]
+
+    araneum.base.rabbitmq.producer.spot:
+        class: Araneum\Base\Service\RabbitMQ\SpotProducerService
+        arguments:
+            - @old_sound_rabbit_mq.spot_producer
+            - @araneum.base.rabbitmq.msg_convert_helper
+            - %rabbitmq_queue_expiration%
+
+    araneum.base.rabbitmq.consumer.spot:
+        class: Araneum\Base\Service\RabbitMQ\SpotConsumerService
+        arguments: [@araneum.base.spot_api, @araneum.base.rabbitmq.msg_convert_helper]
