AC-254 Modify lead insert Api method write tests

--- a/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
@@ -10,7 +10,11 @@ services:
 
     araneum.agent.spotoption.service:
         class: Araneum\Bundle\AgentBundle\Service\SpotOptionService
-        arguments: [@araneum.base.rabbitmq.producer.spot_customer, @araneum.base.spot_api, @doctrine.orm.entity_manager]
+        arguments:
+            - @araneum.base.rabbitmq.producer.spot_customer
+            - @araneum.base.rabbitmq.producer.spot
+            - @araneum.base.spot_api
+            - @doctrine.orm.entity_manager
 
     araneum.agent.logger:
         class: Araneum\Bundle\AgentBundle\Service\AgentLoggerService
@@ -18,13 +22,19 @@ services:
 
     araneum.agent.lead.api_handler:
         class: Araneum\Bundle\AgentBundle\Service\LeadApiHandlerService
-        arguments: [@doctrine.orm.entity_manager, @form.factory, @event_dispatcher]
+        arguments: [@doctrine.orm.entity_manager, @form.factory, @araneum.main.application.manager, @event_dispatcher]
 
     araneum.agent.customer.event_subscriber:
         class: Araneum\Bundle\AgentBundle\EventListener\CustomerSubscriber
         arguments: [@araneum.agent.spotoption.service]
         tags:
             - { name: kernel.event_subscriber}
+
+    app.exception_listener:
+        class: Araneum\Bundle\AgentBundle\EventListener\LeadListener
+        arguments: [@araneum.agent.spotoption.service]
+        tags:
+            - { name: kernel.event_listener, event: araneum.agent.lead.new, method: onCreate }
             
     araneum.agent.error.api_handler:
         class: Araneum\Bundle\AgentBundle\Service\ErrorApiHandlerService
