--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,8 +7,6 @@ parameters:
     database_name:     araneum_core
     database_user:     postgres
     database_password: 123
-    # You should uncomment this if you want use pdo_sqlite
-    # database_path: "%kernel.root_dir%/data.db3"
 
     mailer_transport:  gmail
     mailer_host:       smtp.gmail.com
@@ -16,6 +14,9 @@ parameters:
     mailer_password:   Araneum_Dev_Pass
     mailer_encryption: ssl
     mailer_auth_mode:  login
+
+    nginx_user: araneum_deployer
+    nginx_group: araneum
 
     domain: http://core.mc.araneum.dev
     session_prefix: core.mc.araneum.dev
