--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,7 @@ security:
             form_login:
                 check_path: araneum_manage_login_check
                 success_handler: araneum.auth.success.handler
+                failure_handler: araneum.auth.failure.handler
             logout:
                 path: araneum_manage_logout
 
