--- a/src/Araneum/Base/Resources/config/services.yml
+++ b/src/Araneum/Base/Resources/config/services.yml
@@ -5,6 +5,10 @@ services:
     araneum.auth.success.handler:
         class: Araneum\Base\Symfony\Security\AuthenticationSuccessHandler
 
+    araneum.auth.failure.handler:
+        class: Araneum\Base\Symfony\Security\AuthenticationFailureHandler
+        arguments: [@security.csrf.token_manager]
+
     araneum_datatable:
         class: Araneum\Base\Ali\DatatableBundle\Util\AraneumDatatable
         arguments: [@service_container, @araneum_datatable.query_bilder]
