--- a/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/UserBundle/Resources/config/services.yml
@@ -5,6 +5,12 @@ services:
         tags:
             - { name: 'monolog.logger', channel: 'securirty' }
 
+    araneum_user.user.form:
+            class: Araneum\Bundle\UserBundle\Form\Type\UserType
+            arguments: [@router]
+            tags:
+                - { name: form.type }
+
     araneum_user.user.filter.form:
         class: Araneum\Bundle\UserBundle\Form\Filter\UserFilterType
         arguments: [@doctrine, @service_container]
