--- a/app/config/routing_manage.yml
+++ b/app/config/routing_manage.yml
@@ -1,10 +1,18 @@
+araneum_manage_login:
+    pattern: /login
+    condition: "request.isXmlHttpRequest()"
+    defaults:
+        _controller: FOSUserBundle:Security:login
+
 araneum_manage_login_check:
     pattern: /login_check
+    condition: "request.isXmlHttpRequest()"
     defaults:
         _controller: FOSUserBundle:Security:check
 
 araneum_manage_logout:
     pattern: /logout
+    condition: "request.isXmlHttpRequest()"
     defaults:
         _controller: FOSUserBundle:Security:logout
 
@@ -14,6 +22,7 @@ araneum_user:
 
 araneum_manage_main:
     pattern: /{_params}
+    condition: "!request.isXmlHttpRequest()"
     defaults:
         _controller: AraneumMainBundle:Default:admin
         _params: ~
