AC-302 Fix problems builders

--- a/src/Araneum/Bundle/MainBundle/Resources/menu/left.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/menu/left.yml
@@ -10,7 +10,7 @@ Main:
         Users:
             text: Users
             sref: app.users
-            icon: icon-users
+            icon: icon-people
             translate: admin.sidebar.nav.USERS
 Site_Manager:
     text: Site manager
