--- a/app/config/daemons.yml
+++ b/app/config/daemons.yml
@@ -20,3 +20,10 @@ mik_software_daemon:
             appUser: %nginx_user%
             appGroup: %nginx_group%
             logVerbosity: 6
+
+        araneum_spot_customers:
+            appName: spot-customers
+            appDescription: System Daemon for get Customers from spot
+            appUser: %nginx_user%
+            appGroup: %nginx_group%
+            logVerbosity: 6
