AC-297 Command for get all new Spot customer

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -161,7 +161,19 @@ old_sound_rabbit_mq:
                 name: spot_login_%session_prefix%
                 arguments:
                     "message-ttl": ['I', %rabbitmq_message_ttl%]
-                    "dead-letter-exchange": ['S', 'araneum.base.rabbitmq.producer.spot_login']    
+                    "dead-letter-exchange": ['S', 'araneum.base.rabbitmq.producer.spot_login']
+        application_customer:
+            connection: default
+            exchange_options:
+                name: spot_login_%session_prefix%
+                type: direct
+                auto_delete: false
+                durable: true
+            queue_options:
+                name: spot_login_%session_prefix%
+                arguments:
+                    "message-ttl": ['I', %rabbitmq_message_ttl%]
+                    "dead-letter-exchange": ['S', 'araneum.base.rabbitmq.producer.application_customer']
     consumers:
         spot_customer:
             connection: default
@@ -193,6 +205,16 @@ old_sound_rabbit_mq:
              queue_options:
                  name: spot_login_%session_prefix%
              callback: araneum.base.rabbitmq.consumer.spot_login
+        application_customer:
+             connection: default
+             exchange_options:
+                 name: spot_login_%session_prefix%
+                 type: direct
+                 auto_delete: false
+                 durable: true
+             queue_options:
+                 name: spot_login_%session_prefix%
+             callback: araneum.base.rabbitmq.consumer.application_customer
 
 snc_redis:
     clients:
