--- a/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
@@ -40,3 +40,10 @@ services:
     araneum.agent.error.api_handler:
         class: Araneum\Bundle\AgentBundle\Service\ErrorApiHandlerService
         arguments: [@doctrine.orm.entity_manager, @form.factory, @araneum.main.application.manager]
+
+    araneum.api.application.option.service:
+        class: Araneum\Bundle\AgentBundle\Service\ApplicationOptionService
+        arguments:
+            - @araneum.base.rabbitmq.producer.application_customer
+            - @araneum.base.application_api
+            - @doctrine.orm.entity_manager
