--- a/app/config/daemons.yml
+++ b/app/config/daemons.yml
@@ -27,3 +27,6 @@ mik_software_daemon:
             appUser: %nginx_user%
             appGroup: %nginx_group%
             logVerbosity: 6
+
+parameters:
+    araneum_daemon_checker_iterate: 10
