--- a/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
@@ -41,8 +41,8 @@ services:
         class: Araneum\Bundle\AgentBundle\Service\ErrorApiHandlerService
         arguments: [@doctrine.orm.entity_manager, @form.factory, @araneum.main.application.manager]
 
-    araneum.api.application.option.service:
-        class: Araneum\Bundle\AgentBundle\Service\ApplicationOptionService
+    araneum.api.application.service:
+        class: Araneum\Bundle\AgentBundle\Service\ApplicationService
         arguments:
             - @araneum.base.rabbitmq.producer.application_customer
             - @araneum.base.application_api
