--- a/app/config/daemons.yml
+++ b/app/config/daemons.yml
@@ -1,3 +1,7 @@
+parameters:
+    araneum_daemon_checker_iterate: 10 minutes
+    spot_customer_daemon_timeout: 300
+
 mik_software_daemon:
     daemons:
         araneum_consumer_spot:
@@ -28,5 +32,9 @@ mik_software_daemon:
             appGroup: %nginx_group%
             logVerbosity: 6
 
-parameters:
-    spot_customer_daemon_timeout: 300
+        araneum_daemon_checker:
+            appName: araneum_daemon_checker
+            appDescription: System Daemon checker check.
+            appUser: %nginx_user%
+            appGroup: %nginx_group%
+            logVerbosity: 6
