--- a/app/config/daemons.yml
+++ b/app/config/daemons.yml
@@ -1,3 +1,6 @@
+parameters:
+    daemon_check_daemons_interval: 10
+
 mik_software_daemon:
     daemons:
         araneum_consumer_spot:
@@ -17,6 +20,13 @@ mik_software_daemon:
         araneum_consumer_customer:
             appName: customer-consumer
             appDescription: System Daemon for sending Customers to Spot
+            appUser: %nginx_user%
+            appGroup: %nginx_group%
+            logVerbosity: 6
+
+        daemon_check_daemons:
+            appName: daemons-check
+            appDescription: System Daemon for checking processing of all daemons
             appUser: %nginx_user%
             appGroup: %nginx_group%
             logVerbosity: 6
