AC-322 Create Application actions for admin panel

--- a/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/config/services.yml
@@ -47,3 +47,9 @@ services:
         arguments: [@router]
         tags:
             - { name: form.type }
+
+    araneum.main.application.form:
+            class: Araneum\Bundle\MainBundle\Form\Type\ApplicationAdminType
+            arguments: [@router]
+            tags:
+                - { name: form.type }
