--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: security.yml }
     - { resource: ../../src/Araneum/Base/Resources/config/services.yml }
     - { resource: daemons.yml }
+    - { resource: ldap.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
