--- a/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
@@ -47,3 +47,4 @@ services:
             - @araneum.base.rabbitmq.producer.application_customer
             - @araneum.base.application_api
             - @doctrine.orm.entity_manager
+            - [%application_url%]
