--- a/app/config/ldap.yml
+++ b/app/config/ldap.yml
@@ -1,6 +1,7 @@
 parameters:
     ldap:
         service: app.ldap
+        ldap_host: "nova.office.dev"
         base_dn: uid=araneum,cn=sysaccounts,cn=etc,dc=office,dc=dev
         search_dn: cn=users,cn=accounts,dc=office,dc=dev
         search_password: LK8SoeTbffxFLDu5nOpY
@@ -11,8 +12,8 @@ parameters:
 services:
     api.ldap:
         class: Araneum\Bundle\MainBundle\Service\LdapService
-        arguments: ["nova.office.dev"]
+        arguments: ["@service_container"]
 
     api.ldap.synchronization:
         class: Araneum\Bundle\MainBundle\Service\LdapSynchronizationService
-        arguments: [@doctrine.orm.entity_manager, @api.ldap, @service_container]
+        arguments: ["@doctrine.orm.entity_manager", "@api.ldap", "@service_container"]
