--- a/src/Araneum/Base/Resources/config/services.yml
+++ b/src/Araneum/Base/Resources/config/services.yml
@@ -95,15 +95,15 @@ services:
 
     araneum.base.application_api:
         class: Araneum\Base\Service\Application\ApplicationApiSenderService
-        arguments: [@guzzle.client, @doctrine.orm.entity_manager, %spot_enable_json_responce%]
+        arguments: ["@guzzle.client", "@doctrine.orm.entity_manager", "%spot_enable_json_responce%"]
 
     araneum.base.rabbitmq.producer.application_customer:
         class: Araneum\Base\Service\RabbitMQ\ApiCustomerProducerService
         arguments:
-            - @old_sound_rabbit_mq.spot_producer
-            - @araneum.base.rabbitmq.msg_convert_helper
-            - %rabbitmq_queue_expiration%
+            - "@old_sound_rabbit_mq.spot_producer"
+            - "@araneum.base.rabbitmq.msg_convert_helper"
+            - "%rabbitmq_queue_expiration%"
 
     araneum.base.rabbitmq.consumer.application_customer:
         class: Araneum\Base\Service\RabbitMQ\ApiCustomerConsumerService
-        arguments: [@araneum.base.application_api, @araneum.base.rabbitmq.msg_convert_helper, @doctrine.orm.entity_manager]
+        arguments: ["@araneum.base.application_api", "@araneum.base.rabbitmq.msg_convert_helper", "@doctrine.orm.entity_manager"]
