AC-330 Create adapter for communication with Spot.Api

--- a/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
+++ b/src/Araneum/Bundle/AgentBundle/Resources/config/services.yml
@@ -40,3 +40,7 @@ services:
     araneum.agent.error.api_handler:
         class: Araneum\Bundle\AgentBundle\Service\ErrorApiHandlerService
         arguments: [@doctrine.orm.entity_manager, @form.factory, @araneum.main.application.manager]
+
+    araneum.agent.spot.adapter:
+        class: Araneum\Bundle\AgentBundle\Service\SpotAdapterService
+        arguments: [@doctrine.orm.entity_manager, @araneum.base.spot_api]
