AC-323 Login user after create. Add login in spot after customer create

--- a/src/Araneum/Base/Resources/config/services.yml
+++ b/src/Araneum/Base/Resources/config/services.yml
@@ -58,7 +58,11 @@ services:
 
     araneum.base.rabbitmq.consumer.spot_customer:
         class: Araneum\Base\Service\RabbitMQ\SpotCustomerConsumerService
-        arguments: [@araneum.base.spot_api, @araneum.base.rabbitmq.msg_convert_helper, @doctrine.orm.entity_manager]
+        arguments:
+            - '@araneum.base.spot_api'
+            - '@araneum.base.rabbitmq.msg_convert_helper'
+            - '@doctrine.orm.entity_manager'
+            - '@araneum.agent.spotoption.service'
 
     araneum.base.spot_api:
         class: Araneum\Base\Service\Spot\SpotApiSenderService
